k8s/base/devonn-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"devonn-backend","namespace":"devonn"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"devonn-backend"}},"template":{"metadata":{"labels":{"app":"devonn-backend"}},"spec":{"containers":[{"image":"211125423223.dkr.ecr.us-west-2.amazonaws.com/production/devonn-ai:backend-latest","imagePullPolicy":"Always","name":"devonn-backend","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2025-11-10T13:11:32Z"
  generation: 1
  name: devonn-backend
  namespace: devonn
  resourceVersion: "15208077"
  uid: 9d222079-8f47-423a-9d0c-1c9464e31b5d
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: devonn-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: devonn-backend
    spec:
      containers:
      - image: 211125423223.dkr.ecr.us-west-2.amazonaws.com/production/devonn-ai:backend-latest
        imagePullPolicy: Always
        name: devonn-backend
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-11-10T13:11:32Z"
    lastUpdateTime: "2025-11-10T13:11:40Z"
    message: ReplicaSet "devonn-backend-678db79d54" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-04-18T02:00:49Z"
    lastUpdateTime: "2026-04-18T02:00:49Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
