k8s/base/devonn-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"devonn-frontend","namespace":"devonn"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"devonn-frontend"}},"template":{"metadata":{"labels":{"app":"devonn-frontend"}},"spec":{"containers":[{"image":"211125423223.dkr.ecr.us-west-2.amazonaws.com/production/devonn-ai:frontend-latest","imagePullPolicy":"Always","name":"devonn-frontend","ports":[{"containerPort":80}]}]}}}}
  creationTimestamp: "2025-11-10T13:11:33Z"
  generation: 1
  name: devonn-frontend
  namespace: devonn
  resourceVersion: "15388602"
  uid: 07c7708e-f6e9-4539-bc74-7f87ce76c6a7
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: devonn-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: devonn-frontend
    spec:
      containers:
      - image: 211125423223.dkr.ecr.us-west-2.amazonaws.com/production/devonn-ai:frontend-latest
        imagePullPolicy: Always
        name: devonn-frontend
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-04-18T22:28:52Z"
    lastUpdateTime: "2026-04-18T22:28:52Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-04-18T22:28:52Z"
    lastUpdateTime: "2026-04-18T22:28:52Z"
    message: ReplicaSet "devonn-frontend-77cc849dc8" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
