k8s/base/envoy-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2025-11-10T08:01:03Z"
  generation: 1
  labels:
    app: envoy-proxy
  name: envoy-proxy
  namespace: devonn
  resourceVersion: "15208080"
  uid: 10288a2d-9634-4665-be76-46c94fe8821a
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: envoy-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: envoy-proxy
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - -c
        - /etc/envoy/envoy.yaml
        - --service-cluster
        - devonn-cluster
        - --service-node
        - devonn-node
        image: envoyproxy/envoy:v1.22.0
        imagePullPolicy: IfNotPresent
        name: envoy
        ports:
        - containerPort: 9901
          name: admin
          protocol: TCP
        - containerPort: 15001
          name: proxy
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/envoy-certs
          mountPropagation: None
          name: envoy-certs
          readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - name: envoy-certs
        secret:
          defaultMode: 420
          optional: false
          secretName: envoy-certs
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2025-11-10T08:01:03Z"
    lastUpdateTime: "2025-11-10T08:01:11Z"
    message: ReplicaSet "envoy-proxy-64fc9dbcd7" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-04-18T02:00:49Z"
    lastUpdateTime: "2026-04-18T02:00:49Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
